<resources>
    <string name="app_name">GitSearch</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="search_hint">Search</string>
    <string name="owner_label_details">Owner</string>
    <string name="details_repository_label">Details repository</string>
    <string name="description_label_details">Description</string>
    <string name="login_name_divider_detils">:</string>
    <string name="label_email_details">email:</string>
    <string name="no_internet_connection_label">No internet connection</string>
    <string name="forks_label_list">Forks</string>
    <string name="github_logo_part">GitHub</string>
    <string name="search_logo_part">Search</string>
</resources>